MDEV-22524 SIGABRT in safe_mutex_unlock with session_track_system_variables and max_relay_log_size.

lock LOCK_global_system_variables around the get_one_variable() call
in the Session_sysvars_tracker::store_variable().